--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 
 <app-first-component></app-first-component>
 
-<app-parent-data></app-parent-data>
+<app-parent-data [name]="userName"[userData]="userData"></app-parent-data>
+
 
